--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block content %}
-    <h1 class="display-4 text-success">It all works!</h1>
+{% block page_header %}
+    <div class="container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
 {% endblock %}
+
+{% block content %}
+    
+{% endblock %}
+
