--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,6 +10,23 @@
 {% endblock %}
 
 {% block content %}
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-12 col-md-12 my-auto text-center">
+                <h1 class="display-4 text-white caption-background fade-in-text">
+                    Our crafters carefully restore and sell furniture.
+                </h1>
+                <p class="display-7 text-white caption-background fade-in-text">
+                    Visit our shop here online or come in person to our shop in Frances Street, Dublin.
+                </p>
+                <div class="my-5">
+                    <h4>
+                        <a href="" class="shop-now-button btn rounded-pill text-uppercase py-3 fade-in-text">Shop Now</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>  
     
 {% endblock %}
 
