feat: add main navigation header and mobile header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,6 @@
+html {
+    height: 100%;
+}
 
 ul {
     margin-bottom: 0rem;
@@ -6,8 +9,7 @@ ul {
 body {
     background: url('/media/martin-pechy-bpg-ngqrPc8-unsplash.jpg') no-repeat center center fixed;
     background-size: cover;
-    background-position: top;
-    height: calc(130vh - 164px);
+    height: calc(110vh - 164px);
     color: #555;
     font-family: 'Poppins', sans-serif;
 }
