--- a/templates/base.html
+++ b/templates/base.html
@@ -44,18 +44,18 @@
                 </a>
             </div>
             <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right">
+                <ul class="list-inline list-unstyled d-flex align-items-center justify-content-end">
                     <li class="list-inline-item">
-                        <form method="GET" action="">
-                            <div class="p-1 small btn rounded-pill shadow mb-4">
-                                <div class="input-group ml-2">
-                                    <input type="search" placeholder="Search.." name="q" aria-describedby="button-addon1" class="border-0">
-                                    <div class="input-group-append">
-                                        <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-search"></i></button>
-                                    </div>
-                                </div>
+                        <div class="input-group">
+                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                            <div class="input-group-append">
+                                <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </button>
                             </div>
-                        </form>
+                        </div>
                     </li>
                     <li class="list-inline-item dropdown">
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -93,6 +93,15 @@
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="row bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
+            </nav>
         </div>
     </header>
           
