--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,7 +62,18 @@ body {
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
-  }
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
+
 
 /* -------------------------------- Media Queries */
 
