style: update hero image and overlay

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,11 +7,12 @@ ul {
 }
 
 body {
-    background: url('/media/martin-pechy-bpg-ngqrPc8-unsplash.jpg') no-repeat center center fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.05)), url('/media/julian-hochgesang-4DqsMC4-QQc-unsplash.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(110vh - 164px);
     color: #555;
     font-family: 'Poppins', sans-serif;
+    background-color: #000000;
 }
 
 .logo-font {
