--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,7 +21,7 @@
                 </p>
                 <div class="my-5">
                     <h4>
-                        <a href="" class="shop-now-button btn rounded-pill text-uppercase py-3 fade-in-text">Shop Now</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn rounded-pill text-uppercase py-3 fade-in-text">Shop Now</a>
                     </h4>
                 </div>
             </div>
