--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -9,7 +9,7 @@
                 <a href="" class="dropdown-item ">By Category</a>
                 <a href="" class="dropdown-item ">By Crafter</a>
                 <a href="" class="dropdown-item ">By Source</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
