--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="container h-100">
-        <div class="row h-100">
+        <div class="row h-100 mt-5 pt-5">
             <div class="col-12 col-md-12 my-auto text-center">
                 <h1 class="display-4 text-white caption-background fade-in-text">
                     Our crafters carefully restore and sell furniture.
