--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-6 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0">Furniture <strong>Restoration </strong>Collective</h2>
+                    <h3 class="logo-font text-black my-0">Furniture <strong>Restoration </strong>Collective</h3>
                 </a>
             </div>
             <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
@@ -102,6 +102,11 @@
                 {% include 'includes/mobile-top-header.html' %}
                 {% include 'includes/main-nav.html' %}
             </nav>
+        </div>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col bg-green text-white">
+                <h5 class="my-1">Free delivery nationwide on orders over €{{ free_shipping_threshold }}!</h5>                
+            </div>            
         </div>
     </header>
           
