--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -52,7 +52,7 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Commercial Sales
+                Commercial
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
                 <a href="" class="dropdown-item">Chairs</a>
@@ -65,7 +65,7 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Special Offers
+                Specials
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
                 <a href="" class="dropdown-item">New Arrivals</a>
