--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,10 +5,10 @@
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item ">By Category</a>
-                <a href="" class="dropdown-item ">By Crafter</a>
-                <a href="" class="dropdown-item ">By Source</a>
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}?sort=crafter&direction=asc" class="dropdown-item ">By Crafter</a>
+                <a href="{% url 'products' %}?sort=source&direction=asc" class="dropdown-item ">By Source</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
