--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -30,6 +30,20 @@
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0 font-weight-bold">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                    {% if product.category %}
+                        <p class="small mt-1 mb-0">
+                            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                                <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                            </a>
+                        </p>
+                    {% endif %}
+                    {% if product.crafter %}
+                        <p class="small mt-1 mb-0">
+                            <a class="text-muted" href="{% url 'products' %}?crafter={{ product.crafter.first_name }}">
+                                <i class="fas fa-tag mr-1"></i>{{ product.crafter.full_name }}
+                            </a>
+                        </p>
+                    {% endif %}                       
                     <p class="mt-3">{{ product.description }}</p>
                     <p class="mt-5"><strong>More about our crafter {{ product.crafter }}</strong></p>
                     <p class="mt-3">{{ product.crafter.bio }}</p>
