--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -41,7 +41,7 @@
             <a class="logo-font nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Bedroom
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">+
+            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
                 <a href="{% url 'products' %}?category=beds" class="dropdown-item">Beds</a>
                 <a href="{% url 'products' %}?category=wardrobes" class="dropdown-item">Wardrobes</a>
                 <a href="{% url 'products' %}?category=dressing_tables" class="dropdown-item">Dressing Tables</a>
