--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -38,12 +38,12 @@
                         </p>
                     {% endif %}
                     {% if product.crafter %}
-                        <p class="small mt-1 mb-0">
+                        <p class="small mt-1 mb-0"> Restored by 
                             <a class="text-muted" href="{% url 'products' %}?crafter={{ product.crafter.first_name }}">
-                                <i class="fas fa-tag mr-1"></i>{{ product.crafter.full_name }}
+                                {{ product.crafter.full_name }}.
                             </a>
                         </p>
-                    {% endif %}                       
+                    {% endif %}                     
                     <p class="mt-3">{{ product.description }}</p>
                     <p class="mt-5"><strong>More about our crafter {{ product.crafter }}</strong></p>
                     <p class="mt-3">{{ product.crafter.bio }}</p>
