feat: add bag context and delivery logic

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-green text-white">
-                <h5 class="my-1">Free delivery nationwide on orders over €{{ free_shipping_threshold }}!</h5>                
+                <h5 class="my-1">Free delivery nationwide on orders over €{{ free_delivery_threshold }}!</h5>                
             </div>            
         </div>
     </header>
