--- a/static/css/base.css
+++ b/static/css/base.css
@@ -112,6 +112,25 @@ a.category-badge > span.badge:hover {
     border: 1px solid black;
 }
 
+
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
