feat: auto populate base price on quote template

--- a/quotes/templates/quotes/category_detail_dropdown_list_options.html
+++ b/quotes/templates/quotes/category_detail_dropdown_list_options.html
@@ -1,4 +1,4 @@
-<option value="">--------</option>
+<option value="">---------</option>
 {% for detail in category_detail %}
-<option value="{{ detail.pk }}">{{ detail.name }}</option>
+<option value="{{ detail.pk }}">{{ detail.name }} {{ detail.price }}</option>
 {% endfor %}
