--- a/quotes/templates/quotes/quote_form.html
+++ b/quotes/templates/quotes/quote_form.html
@@ -28,11 +28,11 @@
 <h2>Quote Form</h2>
     <div class="row">
         <div class="col-md-8 mt-3 mb-5 offset-md-2">
-            <form method="post" id="quoteForm" data-categories-url="{% url 'ajax_load_categories' %}">
+            <form method="post" id="quoteForm" data-categories-url="{% url 'ajax_load_categories' %}" data-categorydetail-url="{% url 'ajax_load_quotecategorydetail' %}">
                 {% csrf_token %} 
-                {{ form|crispy }} 
+                {{ form|crispy }}
             <input type="submit" value="Save" class="btn btn-signup right mb-5">
-            </form>
+            
         </div>
     </div>
 </body>
@@ -46,21 +46,39 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript"></script>
 <script>
+    
+
     $("#id_quotecategory").change(function () {
-      var url = $("#quoteForm").attr("data-categories-url");  // get the url of the `load_cities` view
-      var categoryId = $(this).val();  // get the selected country ID from the HTML input
+        var url = $("#quoteForm").attr("data-categories-url");  // get the url of the `load_categories` view
+        console.log(url);
+        var categoryId = $(this).val();  // get the selected category ID from the HTML input
+        console.log(categoryId);
+       
+                $.ajax({                       // initialize an AJAX request
+                    url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-categories/)
+                    data: {
+                    'quotecategory': categoryId       // add the country id to the GET parameters
+                    },
+                    success: function (data) {   // `data` is the return of the `load_categories` view function
+                    $("#id_quotecategorydetail").html(data);  // replace the contents of the category input with the data that came from the server
+                    }
+                })})
 
-      $.ajax({                       // initialize an AJAX request
-        url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
-        data: {
-          'quotecategory': categoryId       // add the country id to the GET parameters
-        },
-        success: function (data) {   // `data` is the return of the `load_cities` view function
-          $("#id_quotecategorydetail").html(data);  // replace the contents of the city input with the data that came from the server
-        }
-      });
+    $("#id_quotecategorydetail").change(function () {
+        var url02 = $("#quoteForm").attr("data-categorydetail-url");  
+        console.log(url02);
+        var nameId = $(this).val();  
+        console.log(nameId);    
+                $.ajax({                       
+                    url: url02,                 
+                    data: {
+                    'name': nameId      
+                    },
+                    success: function (data) {   
+                    $("#id_base_price").val(data.price);
+                    }
+                })})
 
-    });
 </script>
 {% endblock %}
 
