--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0 font-weight-bold">Original!! {{ product.name }}</p>
+                    <p class="mb-0 font-weight-bold">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
                     {% if product.category %}
                         <p class="small mt-1 mb-0">
@@ -88,7 +88,7 @@
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
                     </form>
-                    <p class="mt-5"><strong>More about our crafter {{ product.crafter }}</strong></p>
+                    <p class="mt-5"><strong>More about {{ product.crafter }}</strong></p>
                     <p class="mt-3">{{ product.crafter.bio }}</p>
                 </div>
             </div>
