--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,6 +37,12 @@
                             </a>
                         </p>
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                     {% if product.crafter %}
                         <p class="small mt-1 mb-0"> Restored by 
                             <a class="text-muted" href="{% url 'products' %}?crafter={{ product.crafter.first_name }}">
