feat: create products list and links for add, update and delete

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -242,6 +242,18 @@ a.category-badge > span.badge:hover {
     border-radius: 0;
 }
 
+.fa-square-plus {
+    color: green;
+}
+
+.fa-eye {
+    color: orange;
+  }
+
+.fa-circle-xmark {
+    color: red;
+  }
+
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
