--- a/products/templates/products/list_products.html
+++ b/products/templates/products/list_products.html
@@ -20,17 +20,47 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Product Custom Quote</title>
+    <title>List Products</title>
 </head>
 
 <body>
-<h1>{{product_id}}</h1>
-<h2>Product List</h2>
+    <div class="text-center p-3 mt-3">
+        <h2 class="mt-2">Product List</h2>
+        <h4 class ="mt-5">Add a Product<a href="{% url 'add_product' %}"><i class="fa-sharp fa-regular fa-square-plus ml-3"></i></i></a></h4>
+    </div>
     <div class="row">
         <div class="col-md-8 mt-3 mb-5 offset-md-2">
-            <p>The queryset object:</p>
-                {{ mylist }}
-        
+                                    
+                <div class="table-responsive">
+                    <table class="table mb-5">
+                        <thead>
+                            <tr class="text-center">
+                                <th>SKU</th>
+                                <th>Quote</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>View</th>
+                                <th>Edit</th>
+                                <th>Delete</th>
+                            </tr>
+                        </thead>
+                        {% for product in mylist %}
+                        <tbody>
+                            <tr class="text-center">
+                                <td>{{product.sku}}</td>
+                                <td>{{product.quote}}</td>
+                                <td>{{product.name}}</td>
+                                <td>{{product.price}}</td>
+                                <td><a href=''><i class="fas fa-eye"></i></a></td>    
+                                <td><a href='{% url "edit_product" product.id %}'><i class="fa-sharp fa-regular fa-pen-to-square"></i></a></td>
+                                <td><a href='{% url "delete_product" product.id %}'><i class="fa-sharp fa-regular fa-circle-xmark"></i></a></td>
+                            </tr>
+                        </tbody>
+                        {% endfor %}
+                        
+                    </table>
+                </div>
+
             
         </div>
     </div>
