--- a/products/templates/products/list_products.html
+++ b/products/templates/products/list_products.html
@@ -26,7 +26,7 @@
 <body>
     <div class="text-center p-3 mt-3">
         <h2 class="mt-2">Product List</h2>
-        <h4 class ="mt-5">Add a Product<a href="{% url 'add_product' %}"><i class="fa-sharp fa-regular fa-square-plus ml-3"></i></i></a></h4>
+        <h4 class ="mt-5">Add a Product<a href="{% url 'add_product' %}"><i class="fa-sharp fa-regular fa-square-plus ml-3"></i></a></h4>
     </div>
     <div class="row">
         <div class="col-md-8 mt-3 mb-5 offset-md-2">
