--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,7 +34,7 @@
         <!-- Five columns below the hero -->
         <div class="row justify-content-center">
           <div class="col-lg-2">
-            <img class="img-thumbnail" src="{% get_media_prefix %}pexels-ono-kosuki-5974330.png"/> alt="pat henry cabinet maker working with wood">
+            <img class="img-thumbnail" src="{% get_media_prefix %}pexels-ono-kosuki-5974330.png" alt="pat henry cabinet maker working with wood">
             <h3 class="pt-3 text-muted">Pat Henry</h3>
             <p>Pat is a cabinet maker with a special interest in finding and restoring furniture needing extensive reconstruction work.</p>
           </div>
