feat: add footer to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -140,6 +140,90 @@
 
     {% block content %}
     {% endblock %}
+    
+    <footer class="bg-dark text-center text-white mt-5">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <!-- Section: Form -->
+            <section class="">
+            <form action="">
+              <!--Grid row-->
+              <div class="row d-flex justify-content-center">
+                <!--Grid column-->
+                <div class="col-auto">
+                  <p class="pt-2">
+                    <strong>Newsletter Signup</strong>
+                  </p>
+                </div>
+                <!--Grid column-->
+      
+                <!--Grid column-->
+                <div class="col-md-5 col-12">
+                  <!-- Email input -->
+                  <div class="form-outline form-white mb-4">
+                    <input type="email" id="form5Example29" class="form-control" placeholder="Enter your Email Address"/>
+                  </div>
+                </div>
+                <!--Grid column-->
+      
+                <!--Grid column-->
+                <div class="col-auto">
+                  <!-- Submit button -->
+                  <button type="submit" class="btn btn-outline-light mb-4">
+                    Subscribe
+                  </button>
+                </div>
+                <!--Grid column-->
+              </div>
+              <!--Grid row-->
+            </form>
+            </section>
+            <section class="mb-4">
+                <!-- Facebook -->
+                <a
+                  class="btn text-white btn-floating m-1"
+                  style="background-color: #3b5998;"
+                  href="https://www.facebook.com/"
+                  role="button" target="_blank" rel="noopener"
+                  aria-label="Visit our Facebook page (opens in a new tab)"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+                <!-- Pinterest -->
+                <a
+                  class="btn text-white btn-floating m-1"
+                  style="background-color: #55acee;"
+                  href="https://www.pinterest.com/"
+                  role="button" target="_blank" rel="noopener"
+                  aria-label="Visit our Pinterest page (opens in a new tab)"
+                  ><i class="fab fa-pinterest"></i
+                ></a>
+                <!-- Instagram -->
+                <a
+                  class="btn text-white btn-floating m-1"
+                  style="background-color: #ac2bac;"
+                  href="https://www.instagram.com/"
+                  role="button" target="_blank" rel="noopener"
+                  aria-label="Visit our Instagram page (opens in a new tab)"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+            </section>
+            <section class="mb-4">
+                <!-- Phone -->
+                    <i class="fa-solid fa-phone mr-1"></i>
+                    <a href="tel:353-1-1324354657" class="text-white">+353 1 1324354657</a>
+                <!-- Email -->
+                    <i class="fa-solid fa-envelope ml-3 mr-1"></i>
+                    <a href="mailto:furniturerestorationcollective@gmail.com" target="_blank" rel="noopener noreferrer" class="text-white">furniturerestorationcollective@gmail.com</a>
+                </section>
+          <!-- Section: Form -->
+        </div>
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2020 Copyright:
+          <a class="text-white">TBowe</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
 
     {% block postloadjs %}
         <script type="text/javascript">
